    unique ID for each list request. Instead of cancelling, change ID, so
    'cancelled' response is ignored.
12. Place artist biography pictures on alternating right/left side.
13. Larger dot for jumplist when no letters.
14. Use "track of total" and not "track / total"
15. Increase left/right margin around details on desktop botton bar.

1.5.5
-----
 1. Fix 'Append random album to queue'
 2. Use new 'include_online_only_artists:1' for latest LMS8.
 3. Display volume overlay if change volume via incrementVolume() or
    decrementVolume() fuctions. (These are called by lms-material-app when
    hardware volume buttons are used)
 4. If current item has a 'remote_title' element and no 'album' element, then
    allow title (or remote_title) and artist/composer to span up to 3 lines each
    in now-playing.
 5. Show player name in player settings and advanced search titlebars.
 6. Use javascript, not CSS, to hide, and re-style, elements from classic skin
    advanced search results.
 7. Replace statically.io with gitcdn.link for serving user documentation, as
    statically is showing errors.
 8. Add 'All Songs' entry to 'More' menu of artist album list.
 9. Add add/play all actions to search track results.
10. Show emblems on tracks from seach results or 'All Songs'
11. Switch order of add/play buttons in advanced search results, to be
    consistent with the rest of Material.

1.5.4
-----
 1. Fix "0 Items" when showing lyrics in browse view.
 2. Poll server status every 2 seconds during scans.
 3. Fix showing podcast information - revert change to show images for text
    items.
 4. Fix adding/playing albums from advanced search results.
 5. Scroll advanced seach results into view.
 6. Add native callback, allowing to pass player status to native applications.
 7. Hide button to delete virtual library unless settings are unlocked.
 8. Restore library ID when go back.
 9. Assign icon to Audiobooks and Authors categories.